--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,232 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  block-size: 100%;
+  inline-size: 100%;
+
+  /* overflow: hidden auto;
+  scroll-snap-type: y;
+
+  & > body > section {
+    scroll-snap-align: center;
+  } */
+}
+
+body {
+  min-block-size: 100%;
+  min-inline-size: 100%;
+  font-family: system-ui, sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15vh 2vh;
+}
+
+section {
+  block-size: 70vh;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-weight: 100;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+
+  --scalar: 2vw;
+  font-size: clamp(1.5rem, calc(1rem + var(--scalar)), 8rem);
+
+  @media (width > 480px) {
+    & {
+      --scalar: 4vw;
+    }
+  }
+}
+
+span {
+  white-space: nowrap;
+}
+
+letter-animation {
+  @nest [&] > span {
+    display: inline-block;
+    white-space: break-spaces;
+  }
+
+  @nest [&='breath'] {
+    --glow-color: white;
+
+    & > span {
+      animation: breath 1500ms ease calc(var(--index) * 100 * 1ms) infinite
+        alternate;
+    }
+
+    @media (prefers-color-scheme: light) {
+      & {
+        --glow-color: black;
+      }
+    }
+  }
+
+  @nest [&='hover'] {
+    &:hover > span {
+      transform: scale(0.75) perspective(1px);
+    }
+
+    & > span {
+      transition: transform 0.3s ease;
+      cursor: pointer;
+      will-change: transform;
+
+      &:hover {
+        transform: scale(1.25) perspective(1px);
+      }
+    }
+  }
+}
+
+word-animation {
+  @nest [&] {
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 1ch;
+  }
+
+  @nest [&='trampoline'] {
+    & > span {
+      display: inline-block;
+      transform: translateY(100%);
+      animation: trampoline 3s ease calc(var(--index) * 150 * 1ms) infinite
+        alternate;
+    }
+  }
+
+  @nest [&='hover'] {
+    @media (hover) {
+      overflow: hidden;
+
+      & > span {
+        transition: transform 0.3s ease;
+        cursor: pointer;
+
+        &:not(:hover) {
+          transform: translateY(50%);
+        }
+      }
+    }
+  }
+}
+
+/* Text Splitting */
+@keyframes breath {
+  from {
+    animation-timing-function: ease-out;
+    opacity: 0.2;
+  }
+  to {
+    transform: scale(1.25) translateY(-5px) perspective(1px);
+    text-shadow: 0 0 40px var(--glow-color);
+    animation-timing-function: ease-in-out;
+  }
+}
+
+@keyframes octocat-wave {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  20%,
+  60% {
+    transform: rotate(-25deg);
+  }
+  40%,
+  80% {
+    transform: rotate(10deg);
+  }
+}
+
+@keyframes trampoline {
+  0% {
+    transform: translateY(100%) rotate(-30deg);
+    animation-timing-function: ease-out;
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+  50% {
+  }
+  100% {
+    transform: translateY(0) rotate3d(120deg);
+    animation-timing-function: ease-in;
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+}
+
+/* Glassmorphism */
+@keyframes move {
+  from {
+    transform: translate(-100px, -50px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+
+  to {
+    transform: translate(500px, 100px) rotate(-10deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
+
+.blob {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background: linear-gradient(
+    180deg,
+    rgba(47, 184, 255, 0.42) 31.77%,
+    #5c9df1 100%
+  );
+  mix-blend-mode: color-dodge;
+  animation: trampoline 5s infinite alternate;
+  transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+  filter: blur(30px);
+}
+
+.blob-two {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(
+    180deg,
+    rgba(47, 184, 255, 0.42) 31.77%,
+    #5c9df1 100%
+  );
+  mix-blend-mode: color-burn;
+  animation: move 12s infinite alternate-reverse;
+  transition: 1s cubic-bezier(-0.07, -0.8, -0.16, -1);
+  filter: blur(30px);
+}
+
+.blob:hover {
+  filter: blur(0);
+  width: 520px;
+  height: 520px;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
+    inset 300px 300px 0 0px #2b86c5;
+}
+
+.blob-two:hover {
+  filter: blur(0);
+  width: 320px;
+  height: 320px;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
+    inset 300px 300px 0 0px #2b86c5;
+}
