--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --color-light: #fff;
+  --color-dark: #babecc;
+  --color-bg: #ebecf0;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,25 +16,6 @@
 html {
   block-size: 100%;
   inline-size: 100%;
-
-  /* overflow: hidden auto;
-  scroll-snap-type: y;
-
-  & > body > section {
-    scroll-snap-align: center;
-  } */
-}
-
-body {
-  min-block-size: 100%;
-  min-inline-size: 100%;
-  font-family: system-ui, sans-serif;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 15vh 2vh;
 }
 
 section {
@@ -54,9 +41,10 @@ h1 {
 }
 
 span {
-  white-space: nowrap;
+  white-space: normal;
 }
 
+/* Dataset Manipulation */
 letter-animation {
   @nest [&] > span {
     display: inline-block;
@@ -158,13 +146,13 @@ word-animation {
 @keyframes trampoline {
   0% {
     transform: translateY(100%) rotate(-30deg);
-    animation-timing-function: ease-out;
+    animation-timing-function: ease;
     border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
   }
   50% {
   }
   100% {
-    transform: translateY(0) rotate3d(120deg);
+    transform: translateY(0);
     animation-timing-function: ease-in;
     border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
   }
@@ -183,6 +171,19 @@ word-animation {
   }
 }
 
+@keyframes movingAgain {
+  from {
+    transform: translate(-500px, 100px) rotate(-90deg);
+    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+  }
+
+  to {
+    transform: translate(500px, 100px) rotate(-10deg);
+    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+  }
+}
+
+/* Blob Design */
 .blob {
   position: absolute;
   width: 500px;
@@ -193,9 +194,18 @@ word-animation {
     #5c9df1 100%
   );
   mix-blend-mode: color-dodge;
-  animation: trampoline 5s infinite alternate;
-  transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+  animation: trampoline 15s infinite alternate;
+  transition: 0.2s ease-in cubic-bezier(0.07, 0.8, 0.16, 1);
   filter: blur(30px);
+}
+.blob:hover {
+  filter: blur(0);
+  width: 500px;
+  height: 500px;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
+    inset 300px 300px 0 0px #2b86c5;
+  transition: 0.3s ease;
 }
 
 .blob-two {
@@ -212,16 +222,6 @@ word-animation {
   transition: 1s cubic-bezier(-0.07, -0.8, -0.16, -1);
   filter: blur(30px);
 }
-
-.blob:hover {
-  filter: blur(0);
-  width: 520px;
-  height: 520px;
-  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
-    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
-    inset 300px 300px 0 0px #2b86c5;
-}
-
 .blob-two:hover {
   filter: blur(0);
   width: 320px;
@@ -229,4 +229,26 @@ word-animation {
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
     inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
     inset 300px 300px 0 0px #2b86c5;
+}
+
+.blob-three {
+  height: 300px;
+  width: 300px;
+  background: linear-gradient(
+    180deg,
+    rgba(47, 184, 255, 0.42) 31.77%,
+    #5c9df1 100%
+  );
+  mix-blend-mode: color-dodge;
+  animation: trampoline 10s infinite alternate;
+  transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
+}
+.blob-three:hover {
+  /* filter: blur(0); */
+  filter: blur(30px);
+
+  transition: 0.2s ease-in-out;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a,
+    inset 200px 200px 0 0px #784ba8 inset 30px 30px 0 0px #2b86c5;
 }
