--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -171,14 +171,14 @@ word-animation {
   }
 }
 
-@keyframes movingAgain {
+@keyframes moving {
   from {
-    transform: translate(-500px, 100px) rotate(-90deg);
+    transform: rotate(-90deg);
     border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
   }
 
   to {
-    transform: translate(500px, 100px) rotate(-10deg);
+    transform: rotate(-10deg);
     border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
   }
 }
@@ -194,7 +194,7 @@ word-animation {
     #5c9df1 100%
   );
   mix-blend-mode: color-dodge;
-  animation: trampoline 15s infinite alternate;
+  animation: trampoline 5s infinite alternate;
   transition: 0.2s ease-in cubic-bezier(0.07, 0.8, 0.16, 1);
   filter: blur(30px);
 }
@@ -205,6 +205,31 @@ word-animation {
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
     inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
     inset 300px 300px 0 0px #2b86c5;
+  transition: 0.3s ease;
+}
+
+.still-blob {
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(
+    180deg,
+    rgba(47, 184, 255, 0.42) 31.77%,
+    #5c9df1 100%
+  );
+  mix-blend-mode: color-dodge;
+  animation: moving 5s infinite alternate;
+  transition: 0.2s ease-in cubic-bezier(0.07, 0.8, 0.16, 1);
+  filter: blur(30px);
+}
+
+.still-blob:hover {
+  width: 200px;
+  height: 200px;
+  background: transparent;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
+    inset 300px 300px 0 0px #2b86c5;
+  filter: blur(0);
   transition: 0.3s ease;
 }
 
