prepares minimal portfolio landing page to be deployed and attached with job applications

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,6 +16,12 @@
 html {
   block-size: 100%;
   inline-size: 100%;
+  overflow: hidden auto;
+  scroll-snap-type: y;
+
+  & > body > section {
+    scroll-snap-align: center;
+  }
 }
 
 section {
@@ -42,6 +48,15 @@ h1 {
 
 span {
   white-space: normal;
+}
+
+.github-corner {
+  fill: CanvasText;
+  color: Canvas;
+  height: 100%;
+  &:hover .octo-arm {
+    animation: octocat-wave 560ms ease-in-out;
+  }
 }
 
 /* Dataset Manipulation */
