--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -62,9 +62,10 @@ body {
   -webkit-font-smoothing: antialiased;
   // background-color: var(--navy);
   // color: var(--slate);
-  font-family: url('../fonts/Jost-Bold.ttf');
+  // font-family: url('../fonts/Jost-Bold.ttf');
   font-size: var(--fz-xl);
   line-height: 1.3;
+
   @media (max-width: 480px) {
     font-size: var(--fz-lg);
   }
