implements staggering list animation for skills & tech

--- a/assets/css/transitions.css
+++ b/assets/css/transitions.css
@@ -1,12 +1,12 @@
 /* Global page transition */
-/* .page-enter-active,
+.page-enter-active,
 .page-leave-active {
   transition: opacity 1s;
 }
 .page-enter,
 .page-leave-to {
   opacity: 0;
-} */
+}
 
 /* Fade transition */
 /* .fade-enter-active,
@@ -33,6 +33,6 @@
   animation: zoomIn 0.5s;
 } */
 /* .zoom-leave-active { */
-  /*border-radius: 0;*/
-  /* animation: zoomOut 0.5s; */
+/*border-radius: 0;*/
+/* animation: zoomOut 0.5s; */
 /* } */
