--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -133,3 +133,143 @@ section {
     padding: 60px 0;
   }
 }
+
+// TODO:
+// Sidebar Global Styling
+// .side-bar {
+//   width: 40px;
+//   position: fixed;
+//   bottom: 0;
+//   left: ${props => (props.orientation === 'left' ? '40px' : 'auto')};
+//   right: ${props => (props.orientation === 'left' ? 'auto' : '40px')};
+//   z-index: 10;
+//   color: var(--light-slate);
+//   @media (max-width: 1080px) {
+//     left: ${props => (props.orientation === 'left' ? '20px' : 'auto')};
+//     right: ${props => (props.orientation === 'left' ? 'auto' : '20px')};
+//   }
+//   @media (max-width: 768px) {
+//     display: none;
+//   }
+// }
+
+.feather {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  vertical-align: middle;
+}
+
+svg {
+  width: 100%;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
+  color: inherit;
+  position: relative;
+  transition: var(--transition);
+  &:hover,
+  &:focus {
+    color: var(--green);
+  }
+  &.inline-link {
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    position: relative;
+    transition: var(--transition);
+    color: var(--green);
+    &:hover,
+    &:focus,
+    &:active {
+      color: var(--green);
+      outline: 0;
+      &:after {
+        width: 100%;
+      }
+      & > * {
+        color: var(--green) !important;
+        transition: var(--transition);
+      }
+    }
+    &:after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 1px;
+      position: relative;
+      bottom: 0.37em;
+      background-color: var(--green);
+      transition: var(--transition);
+      opacity: 0.5;
+    }
+  }
+}
+
+#social-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  &:after {
+    content: '';
+    display: block;
+    width: 1px;
+    height: 90px;
+    margin: 0 auto;
+    background-color: var(--light-slate);
+  }
+  li {
+    &:last-of-type {
+      margin-bottom: 20px;
+    }
+    a {
+      padding: 10px;
+      &:hover,
+      &:focus {
+        transform: translateY(-3px);
+      }
+      svg {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
+}
+
+.side-email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+
+  &:after {
+    content: '';
+    display: block;
+    width: 1px;
+    height: 90px;
+    margin: 0 auto;
+    background-color: var(--light-slate);
+  }
+  a {
+    margin: 20px auto;
+    padding: 10px;
+    font-family: var(--font-mono);
+    font-size: var(--fz-xxs);
+    line-height: var(--fz-lg);
+    letter-spacing: 0.1em;
+    writing-mode: vertical-rl;
+    &:hover,
+    &:focus {
+      transform: translateY(-3px);
+    }
+  }
+}
