--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -8,6 +8,19 @@
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+:root {
+  --color--text-primary: #202527;
+  --color--text-secondary: #637279;
+  --color--background: whitesmoke;
+  --color--contrast: whitesmoke;
+  --color--mag-background: #e2dfdf;
+}
+:root[dark] {
+  --color--mag-background: #2c3235;
+  --color--text-primary: #dfdad8;
+  --color--background: #202527;
+}
+
 /* Dataset Manipulation */
 letter-animation {
   @nest [&] > span {
@@ -238,4 +251,22 @@ word-animation {
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
     inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
     inset 300px 300px 0 0px #2b86c5;
+}
+
+.still-rect {
+  height: 100px;
+  width: 75vw;
+
+  transition: 0.2s ease-in cubic-bezier(0.07, 0.8, 0.16, 1);
+  filter: blur(30px);
+}
+.still-rect:hover {
+  height: 100px;
+  width: 75vw;
+  background: transparent;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
+    inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px #784ba8,
+    inset 300px 300px 0 0px #2b86c5;
+  transition: 0.3s ease;
+  filter: blur(0);
 }
