--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -134,6 +134,7 @@ section {
   }
 }
 
+// Sidebar Global Styling
 .feather {
   width: 100%;
   height: 100%;
@@ -237,7 +238,7 @@ a {
     display: block;
     width: 1px;
     height: 90px;
-    margin: 0 auto;
+    // margin: 0 auto;
     background-color: var(--light-slate);
   }
   a {
