--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -211,7 +211,7 @@ word-animation {
   height: 100px;
   width: 100px;
   border-color: 1px dashed #bb86fc;
-  background: linear-gradient(120deg, #cf6679, #fff 100%);
+  background: linear-gradient(120deg, #ff9e80, #fff 100%);
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.6),
     inset 100px 100px 0 0px #fa709a, inset 200px 200px 0 0px var(--glow-color),
     inset 300px 300px 0 0px #2b86c5;
